---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 2021-01-07
  Changes:
    - Remindor frame management 
    - Remindor settings and automatic things
  Bugfixes:
    - fixing gui update on inventory/research changes
  Refactor:
    - [tech] using flib-gui-beta
    - [tech] ui-rework
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 2021-01-05
  Changes:
    - new: Selector for remindor
  Refactor:
    - [tech] using more flib-gui
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2020-12-21
  Bugfixes:
    - Miningrecipe must not not requirements
  Changes:
    - "Remindor" - create tasks to remind you to do things
    - Remindor: smart presentation of technologies and ingredients 
    - Stack of goods show range and probability as tooltip
    - Remindor: some horizontal lines
  Refactor:
    - [tech] sorting feature 
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2020-12-12
  Bugfixes:
    - [tech] fixing inherited has to be class specific
    - fixing wrong Joule calculations
    - fixing crash at load
  Changes:
    - tooltip on items: inventory amount and crafting potential
    - crafting from any item in Recipe panel
    - Recipe panel layout
    - new: Remindor
    - [tech] some more table functions
  Refactor:
    - SpecialActions
---------------------------------------------------------------------------------------------------
Version: 0.2.30
Date: 2020-12-10
  Changes:
    - putting panel for created-by in then center since it is more important
    - [tech] extend class-class to handle inherited properties
  Refactor:
    - [tech] using "class" everywhere where class pattern is used