@@ -22,6 +22,17 @@ select-reminder=Configure reminder
 required-for-item=Technologies and items required to craft this item.
 additional-required-for-recipe=Additional technologies and items required  to craft this using this recipe.
 additional-required-for-worker=Additional technologies and items required to craft this worker.
+select-worker=Worker: 
+select-recipe=Recipe: 
+select-variants=Variants: 
+select-target=Target: 
+auto-research=Research automatically 
+auto-crafting=Craft automatically 
+auto-crafting-off=switched off
+auto-crafting-1=start when possible
+auto-crafting-5=start when 5 are possible
+auto-crafting-all=start when all required are possible
+remove-when-fullfilled=Remove task when fullfilled
 
 [mod-setting-name]
 ingteb_column-tab-threshold=Use tabs when more columns than ...
